[gd_scene load_steps=2 format=3 uid="uid://duk10gfjghvu4"]

[ext_resource type="Script" path="res://scripts/ice.gd" id="1_vbhja"]

[node name="ice" type="Area2D"]
script = ExtResource("1_vbhja")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
